# Rust-Weather-CLI

./: .env  Cargo.toml  README.md
src/: main.rs
