[package]
name = "Rust-Weather-CLI"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"     # ✅ add this line
clap = { version = "4.5.51", features = ["derive"] }
dotenv = "0.15"